--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -7,7 +7,7 @@ Tag="users"
 ###############################################################
 #                                                             #
 # Community Applications copyright 2015-2020, Andrew Zawadzki #
-#                    All Rights Reserved                      #
+#          Licenced under the terms of GNU GPLv2              #
 #                                                             #
 ###############################################################
 $plugin = "community.applications";
@@ -1229,6 +1229,9 @@ function post(options,callback) {
 			} catch(e) {
 				myCloseAlert();
 				myCloseSpinner();
+				if ( ! $.trim(retval) ) {
+					retval = "No data was returned.  It is probable that another browser session has rebooted your server.  Reloading this browser tab will probably fix this error";
+				}
 				$("#templates_content").html("Something really wrong went on during "+options.action+"<br>Post the ENTIRE contents of this message in the Community Applications Support Thread<br><br>"+retval.escapeHTML());
 				throw new Error("Something went badly wrong!");
 			}
